[tool.poetry]
name = "xdlang"
version = "0.1.0"
description = ""
authors = ["Mateusz Bednarski <mateusz.bednarski@windowslive.com>"]

[tool.poetry.scripts]
xd = 'xdlang.cli:run'

[tool.poetry.dependencies]
python = "3.10.*"
lark = "^1.1.2"
rich = "^12.4.4"
llvmlite = "^0.38.1"
typer = "^0.4.1"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
mypy = "^0.960"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
